# Cross-OS

./: .gitignore  CMakeLists.txt  README.md  backend.cpp  backend.h  cross-os.desktop  deploy_linux.sh  deploy_windows.bat  installer.iss  main.cpp  main.qml
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake
build-release/.qt/: .qmlls.build.ini  .qmlls.build.ini.part  QtDeploySupport.cmake  QtDeployTargets.cmake  cross-os_qml.cmake  cross-os_res.cmake
build-release/.qt/deploy_qml_imports/: cross_os.cmake
build-release/.qt/qml_imports/: cross-os_build.rsp  cross-os_conf.rsp
build-release/.qt/rcc/: cross-os_raw_qml_0.qrc  qmake_Main.qrc  qrc_cross-os_raw_qml_0.cpp  qrc_qmake_Main.cpp
build-release/.rcc/qmlcache/: all_aotstats.aotstatslist  cross-os_main_qml.cpp  cross-os_main_qml.cpp.aotstats  cross-os_qml_loader_file_list.rsp  cross-os_qmlcache_loader.cpp  module_cross-os.aotstatslist
build-release/.rcc/qmllint/: cross-os.rsp  cross-os_json.rsp  cross-os_module.rsp
build-release/Main/: cross-os_qml_module_dir_map.qrc  main.qml  qmldir
build-release/cross-os_autogen/: deps
build-release/cross-os_autogen/EWIEGA46WW/: moc_backend.cpp  moc_backend.cpp.d  moc_backend.cpp.json
build-release/meta_types/: cross-os_json_file_list.txt  cross-os_json_file_list.txt.timestamp  qt6cross-os_metatypes.json.gen
